--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Agrega Dev Cursos</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#Sobre">Sobre</a>
+            <a href="#Linguagens">Linguagens</a>
+            <a href="#Canais">Canais</a>
+            <a href="#Contato">Contato</a>
+        </nav>
+    </header>
+
+
 </body>
 </html>
