--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrega Dev Cursos</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="#Sobre">Sobre</a>
-            <a href="#Linguagens">Linguagens</a>
-            <a href="#Canais">Canais</a>
-            <a href="#Contato">Contato</a>
-        </nav>
-    </header>
+<html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8">
+        <title>Agrega Dev Cursos</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a href="/about.html">Sobre</a>
+                <a href="#Linguagens">Linguagens</a>
+                <a href="#Canais">Canais</a>
+                <a href="#Contato">Contato</a>
+            </nav>
+        </header>
 
 
-</body>
+    </body>
 </html>
