--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><b>Aplicativos</b> – A facilidade do acesso a celulares de última geração e o recorde de faturamento no iTunes e Google Play só mostra que o mercado de apps não para de crescer. Atualmente, é comum empresas, marcas e negócios contratarem profissionais para criarem aplicativos dedicados aos seus produtos e serviços. Ao alcance de dois ou três clique, sua solução pode estar nestas lojas e estar entre os mais baixados e fazer parte da vida de milhões de pessoas.</li>
                 </ul>
                     
-                    <h3>Clique <a href="videos.html">AQUI</a> ou na aba Vídeos para começar a assistir os vídeos agora e se tornar um programador de sucesso</h3>
+                    <h3>Clique <a href="videos.html">AQUI</a> ou na aba Vídeos para começar a assistir os vídeos agora e se tornar um programador de sucesso!!!</h3>
             </div>
             <div class="wrapper-image"></div>
                 <img src="/assets/img/undraw_web_developer_re_h7ie.svg" alt="">
