--- a/videos.html
+++ b/videos.html
@@ -38,7 +38,7 @@
         <section class="cards">
             <div class="card" id="vAV4Vy4jfkc">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/vAV4Vy4jfkc/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/vAV4Vy4jfkc/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Princípios SOLID em uma API REST com Node.js e TypeScript </p>
@@ -51,7 +51,7 @@
 
             <div class="card" id="sg1zFpNM5Jw">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/sg1zFpNM5Jw/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/sg1zFpNM5Jw/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>TDD na prática - (Live Coding)</p>
@@ -64,7 +64,7 @@
 
             <div class="card" id="9AO2hZJsHrs">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/9AO2hZJsHrs/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/9AO2hZJsHrs/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>CRUD com Node.JS, Express, TypeORM e PostgreSQL</p>
@@ -77,7 +77,7 @@
 
             <div class="card" id="TBplwrsUj4s">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/TBplwrsUj4s/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/TBplwrsUj4s/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Boas práticas para escrever um HTML profissional</p>
@@ -90,7 +90,7 @@
 
             <div class="card" id="VM4e37DaskU">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/VM4e37DaskU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/VM4e37DaskU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Consumindo API no front-end com AXIOS</p>
@@ -103,7 +103,7 @@
 
             <div class="card" id="DemagUML778">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/DemagUML778/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/DemagUML778/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Como organizar um cronograma de estudos de programação com Notion?</p>
@@ -116,7 +116,7 @@
 
             <div class="card" id="hRGLRHAsbZo">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/hRGLRHAsbZo/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/hRGLRHAsbZo/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Banco de dados: O que é e quais existem?</p>
@@ -129,7 +129,7 @@
 
             <div class="card" id="fZZAt0Sbz5k">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/fZZAt0Sbz5k/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/fZZAt0Sbz5k/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>JAVASCRIPT: Vamos construir um WEB Component e aprender Shadow DOM</p>
@@ -149,7 +149,7 @@
 
             <div class="card" id="q2zA4OOjx2g">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/q2zA4OOjx2g/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/q2zA4OOjx2g/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Quase tudo sobre o Universo CSS</p>
@@ -165,7 +165,7 @@
 
             <div class="card" id="lJH-Ovx6KWA">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/lJH-Ovx6KWA/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/lJH-Ovx6KWA/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Comandos fundamentais do SQL: SELECT, UPDATE, INSERT E DELETE</p>
@@ -178,7 +178,7 @@
 
             <div class="card" id="klgtCYfpYyU">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/klgtCYfpYyU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/klgtCYfpYyU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Scope no Javascript de maneira simples e prática</p>
@@ -191,7 +191,7 @@
 
             <div class="card" id="gn7PHkYLDZU">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/gn7PHkYLDZU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="https://i3.ytimg.com/vi/gn7PHkYLDZU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
                     <p>Estilizando o nosso terminal para produtividade</p>
